* Add support for PyPy
Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)

Version 3.0.0 - 2013-10-21
* Initial release